build/obj/tools/groff/build/src/preproc/eqn/y.output
   0  $accept : top $end

   1  top :
   2      | equation

   3  equation : mark
   4           | equation mark

   5  mark : from_to
   6       | MARK mark
   7       | LINEUP mark

   8  from_to : sqrt_over
   9          | sqrt_over TO from_to
  10          | sqrt_over FROM sqrt_over
  11          | sqrt_over FROM sqrt_over TO from_to
  12          | sqrt_over FROM sqrt_over FROM from_to

  13  sqrt_over : script
  14            | SQRT sqrt_over
  15            | sqrt_over OVER sqrt_over
  16            | sqrt_over SMALLOVER sqrt_over

  17  script : nonsup
  18         | simple SUP script

  19  nonsup : simple
  20         | simple SUB nonsup
  21         | simple SUB simple SUP script

  22  simple : TEXT
  23         | QUOTED_TEXT
  24         | SPLIT QUOTED_TEXT
  25         | NOSPLIT TEXT
  26         | '^'
  27         | '~'
  28         | '\t'
  29         | '{' equation '}'
  30         | PILE pile_arg
  31         | LPILE pile_arg
  32         | RPILE pile_arg
  33         | CPILE pile_arg
  34         | MATRIX '{' column_list '}'
  35         | LEFT delim equation RIGHT delim
  36         | LEFT delim equation
  37         | simple BAR
  38         | simple UNDER
  39         | simple PRIME
  40         | simple ACCENT simple
  41         | simple UACCENT simple
  42         | ROMAN simple
  43         | BOLD simple
  44         | ITALIC simple
  45         | FAT simple
  46         | FONT text simple
  47         | SIZE text simple
  48         | FWD number simple
  49         | BACK number simple
  50         | UP number simple
  51         | DOWN number simple
  52         | TYPE text simple
  53         | VCENTER simple
  54         | SPECIAL text simple

  55  number : text

  56  pile_element_list : equation
  57                    | pile_element_list ABOVE equation

  58  pile_arg : '{' pile_element_list '}'
  59           | number '{' pile_element_list '}'

  60  column_list : column
  61              | column_list column

  62  column_element_list : equation
  63                      | column_element_list ABOVE equation

  64  column_arg : '{' column_element_list '}'
  65             | number '{' column_element_list '}'

  66  column : COL column_arg
  67         | LCOL column_arg
  68         | RCOL column_arg
  69         | CCOL column_arg

  70  text : TEXT
  71       | QUOTED_TEXT

  72  delim : text
  73        | '{'
  74        | '}'

state 0
	$accept : . top $end  (0)
	top : .  (1)

	SQRT  shift 1
	LPILE  shift 2
	RPILE  shift 3
	CPILE  shift 4
	PILE  shift 5
	LEFT  shift 6
	SIZE  shift 7
	FONT  shift 8
	ROMAN  shift 9
	BOLD  shift 10
	ITALIC  shift 11
	FAT  shift 12
	TEXT  shift 13
	QUOTED_TEXT  shift 14
	FWD  shift 15
	BACK  shift 16
	DOWN  shift 17
	UP  shift 18
	MATRIX  shift 19
	MARK  shift 20
	LINEUP  shift 21
	TYPE  shift 22
	VCENTER  shift 23
	SPLIT  shift 24
	NOSPLIT  shift 25
	SPECIAL  shift 26
	'^'  shift 27
	'~'  shift 28
	'\t'  shift 29
	'{'  shift 30
	$end  reduce 1

	top  goto 31
	mark  goto 32
	from_to  goto 33
	sqrt_over  goto 34
	script  goto 35
	simple  goto 36
	equation  goto 37
	nonsup  goto 38


state 1
	sqrt_over : SQRT . sqrt_over  (14)

	SQRT  shift 1
	LPILE  shift 2
	RPILE  shift 3
	CPILE  shift 4
	PILE  shift 5
	LEFT  shift 6
	SIZE  shift 7
	FONT  shift 8
	ROMAN  shift 9
	BOLD  shift 10
	ITALIC  shift 11
	FAT  shift 12
	TEXT  shift 13
	QUOTED_TEXT  shift 14
	FWD  shift 15
	BACK  shift 16
	DOWN  shift 17
	UP  shift 18
	MATRIX  shift 19
	TYPE  shift 22
	VCENTER  shift 23
	SPLIT  shift 24
	NOSPLIT  shift 25
	SPECIAL  shift 26
	'^'  shift 27
	'~'  shift 28
	'\t'  shift 29
	'{'  shift 30
	.  error

	sqrt_over  goto 39
	script  goto 35
	simple  goto 36
	nonsup  goto 38


state 2
	simple : LPILE . pile_arg  (31)

	TEXT  shift 40
	QUOTED_TEXT  shift 41
	'{'  shift 42
	.  error

	number  goto 43
	text  goto 44
	pile_arg  goto 45


state 3
	simple : RPILE . pile_arg  (32)

	TEXT  shift 40
	QUOTED_TEXT  shift 41
	'{'  shift 42
	.  error

	number  goto 43
	text  goto 44
	pile_arg  goto 46


state 4
	simple : CPILE . pile_arg  (33)

	TEXT  shift 40
	QUOTED_TEXT  shift 41
	'{'  shift 42
	.  error

	number  goto 43
	text  goto 44
	pile_arg  goto 47


state 5
	simple : PILE . pile_arg  (30)

	TEXT  shift 40
	QUOTED_TEXT  shift 41
	'{'  shift 42
	.  error

	number  goto 43
	text  goto 44
	pile_arg  goto 48


state 6
	simple : LEFT . delim equation RIGHT delim  (35)
	simple : LEFT . delim equation  (36)

	TEXT  shift 40
	QUOTED_TEXT  shift 41
	'{'  shift 49
	'}'  shift 50
	.  error

	text  goto 51
	delim  goto 52


state 7
	simple : SIZE . text simple  (47)

	TEXT  shift 40
	QUOTED_TEXT  shift 41
	.  error

	text  goto 53


state 8
	simple : FONT . text simple  (46)

	TEXT  shift 40
	QUOTED_TEXT  shift 41
	.  error

	text  goto 54


state 9
	simple : ROMAN . simple  (42)

	LPILE  shift 2
	RPILE  shift 3
	CPILE  shift 4
	PILE  shift 5
	LEFT  shift 6
	SIZE  shift 7
	FONT  shift 8
	ROMAN  shift 9
	BOLD  shift 10
	ITALIC  shift 11
	FAT  shift 12
	TEXT  shift 13
	QUOTED_TEXT  shift 14
	FWD  shift 15
	BACK  shift 16
	DOWN  shift 17
	UP  shift 18
	MATRIX  shift 19
	TYPE  shift 22
	VCENTER  shift 23
	SPLIT  shift 24
	NOSPLIT  shift 25
	SPECIAL  shift 26
	'^'  shift 27
	'~'  shift 28
	'\t'  shift 29
	'{'  shift 30
	.  error

	simple  goto 55


state 10
	simple : BOLD . simple  (43)

	LPILE  shift 2
	RPILE  shift 3
	CPILE  shift 4
	PILE  shift 5
	LEFT  shift 6
	SIZE  shift 7
	FONT  shift 8
	ROMAN  shift 9
	BOLD  shift 10
	ITALIC  shift 11
	FAT  shift 12
	TEXT  shift 13
	QUOTED_TEXT  shift 14
	FWD  shift 15
	BACK  shift 16
	DOWN  shift 17
	UP  shift 18
	MATRIX  shift 19
	TYPE  shift 22
	VCENTER  shift 23
	SPLIT  shift 24
	NOSPLIT  shift 25
	SPECIAL  shift 26
	'^'  shift 27
	'~'  shift 28
	'\t'  shift 29
	'{'  shift 30
	.  error

	simple  goto 56


state 11
	simple : ITALIC . simple  (44)

	LPILE  shift 2
	RPILE  shift 3
	CPILE  shift 4
	PILE  shift 5
	LEFT  shift 6
	SIZE  shift 7
	FONT  shift 8
	ROMAN  shift 9
	BOLD  shift 10
	ITALIC  shift 11
	FAT  shift 12
	TEXT  shift 13
	QUOTED_TEXT  shift 14
	FWD  shift 15
	BACK  shift 16
	DOWN  shift 17
	UP  shift 18
	MATRIX  shift 19
	TYPE  shift 22
	VCENTER  shift 23
	SPLIT  shift 24
	NOSPLIT  shift 25
	SPECIAL  shift 26
	'^'  shift 27
	'~'  shift 28
	'\t'  shift 29
	'{'  shift 30
	.  error

	simple  goto 57


state 12
	simple : FAT . simple  (45)

	LPILE  shift 2
	RPILE  shift 3
	CPILE  shift 4
	PILE  shift 5
	LEFT  shift 6
	SIZE  shift 7
	FONT  shift 8
	ROMAN  shift 9
	BOLD  shift 10
	ITALIC  shift 11
	FAT  shift 12
	TEXT  shift 13
	QUOTED_TEXT  shift 14
	FWD  shift 15
	BACK  shift 16
	DOWN  shift 17
	UP  shift 18
	MATRIX  shift 19
	TYPE  shift 22
	VCENTER  shift 23
	SPLIT  shift 24
	NOSPLIT  shift 25
	SPECIAL  shift 26
	'^'  shift 27
	'~'  shift 28
	'\t'  shift 29
	'{'  shift 30
	.  error

	simple  goto 58


state 13
	simple : TEXT .  (22)

	.  reduce 22


state 14
	simple : QUOTED_TEXT .  (23)

	.  reduce 23


state 15
	simple : FWD . number simple  (48)

	TEXT  shift 40
	QUOTED_TEXT  shift 41
	.  error

	number  goto 59
	text  goto 44


state 16
	simple : BACK . number simple  (49)

	TEXT  shift 40
	QUOTED_TEXT  shift 41
	.  error

	number  goto 60
	text  goto 44


state 17
	simple : DOWN . number simple  (51)

	TEXT  shift 40
	QUOTED_TEXT  shift 41
	.  error

	number  goto 61
	text  goto 44


state 18
	simple : UP . number simple  (50)

	TEXT  shift 40
	QUOTED_TEXT  shift 41
	.  error

	number  goto 62
	text  goto 44


state 19
	simple : MATRIX . '{' column_list '}'  (34)

	'{'  shift 63
	.  error


state 20
	mark : MARK . mark  (6)

	SQRT  shift 1
	LPILE  shift 2
	RPILE  shift 3
	CPILE  shift 4
	PILE  shift 5
	LEFT  shift 6
	SIZE  shift 7
	FONT  shift 8
	ROMAN  shift 9
	BOLD  shift 10
	ITALIC  shift 11
	FAT  shift 12
	TEXT  shift 13
	QUOTED_TEXT  shift 14
	FWD  shift 15
	BACK  shift 16
	DOWN  shift 17
	UP  shift 18
	MATRIX  shift 19
	MARK  shift 20
	LINEUP  shift 21
	TYPE  shift 22
	VCENTER  shift 23
	SPLIT  shift 24
	NOSPLIT  shift 25
	SPECIAL  shift 26
	'^'  shift 27
	'~'  shift 28
	'\t'  shift 29
	'{'  shift 30
	.  error

	mark  goto 64
	from_to  goto 33
	sqrt_over  goto 34
	script  goto 35
	simple  goto 36
	nonsup  goto 38


state 21
	mark : LINEUP . mark  (7)

	SQRT  shift 1
	LPILE  shift 2
	RPILE  shift 3
	CPILE  shift 4
	PILE  shift 5
	LEFT  shift 6
	SIZE  shift 7
	FONT  shift 8
	ROMAN  shift 9
	BOLD  shift 10
	ITALIC  shift 11
	FAT  shift 12
	TEXT  shift 13
	QUOTED_TEXT  shift 14
	FWD  shift 15
	BACK  shift 16
	DOWN  shift 17
	UP  shift 18
	MATRIX  shift 19
	MARK  shift 20
	LINEUP  shift 21
	TYPE  shift 22
	VCENTER  shift 23
	SPLIT  shift 24
	NOSPLIT  shift 25
	SPECIAL  shift 26
	'^'  shift 27
	'~'  shift 28
	'\t'  shift 29
	'{'  shift 30
	.  error

	mark  goto 65
	from_to  goto 33
	sqrt_over  goto 34
	script  goto 35
	simple  goto 36
	nonsup  goto 38


state 22
	simple : TYPE . text simple  (52)

	TEXT  shift 40
	QUOTED_TEXT  shift 41
	.  error

	text  goto 66


state 23
	simple : VCENTER . simple  (53)

	LPILE  shift 2
	RPILE  shift 3
	CPILE  shift 4
	PILE  shift 5
	LEFT  shift 6
	SIZE  shift 7
	FONT  shift 8
	ROMAN  shift 9
	BOLD  shift 10
	ITALIC  shift 11
	FAT  shift 12
	TEXT  shift 13
	QUOTED_TEXT  shift 14
	FWD  shift 15
	BACK  shift 16
	DOWN  shift 17
	UP  shift 18
	MATRIX  shift 19
	TYPE  shift 22
	VCENTER  shift 23
	SPLIT  shift 24
	NOSPLIT  shift 25
	SPECIAL  shift 26
	'^'  shift 27
	'~'  shift 28
	'\t'  shift 29
	'{'  shift 30
	.  error

	simple  goto 67


state 24
	simple : SPLIT . QUOTED_TEXT  (24)

	QUOTED_TEXT  shift 68
	.  error


state 25
	simple : NOSPLIT . TEXT  (25)

	TEXT  shift 69
	.  error


state 26
	simple : SPECIAL . text simple  (54)

	TEXT  shift 40
	QUOTED_TEXT  shift 41
	.  error

	text  goto 70


state 27
	simple : '^' .  (26)

	.  reduce 26


state 28
	simple : '~' .  (27)

	.  reduce 27


state 29
	simple : '\t' .  (28)

	.  reduce 28


state 30
	simple : '{' . equation '}'  (29)

	SQRT  shift 1
	LPILE  shift 2
	RPILE  shift 3
	CPILE  shift 4
	PILE  shift 5
	LEFT  shift 6
	SIZE  shift 7
	FONT  shift 8
	ROMAN  shift 9
	BOLD  shift 10
	ITALIC  shift 11
	FAT  shift 12
	TEXT  shift 13
	QUOTED_TEXT  shift 14
	FWD  shift 15
	BACK  shift 16
	DOWN  shift 17
	UP  shift 18
	MATRIX  shift 19
	MARK  shift 20
	LINEUP  shift 21
	TYPE  shift 22
	VCENTER  shift 23
	SPLIT  shift 24
	NOSPLIT  shift 25
	SPECIAL  shift 26
	'^'  shift 27
	'~'  shift 28
	'\t'  shift 29
	'{'  shift 30
	.  error

	mark  goto 32
	from_to  goto 33
	sqrt_over  goto 34
	script  goto 35
	simple  goto 36
	equation  goto 71
	nonsup  goto 38


state 31
	$accept : top . $end  (0)

	$end  accept


state 32
	equation : mark .  (3)

	.  reduce 3


state 33
	mark : from_to .  (5)

	.  reduce 5


state 34
	from_to : sqrt_over .  (8)
	from_to : sqrt_over . TO from_to  (9)
	from_to : sqrt_over . FROM sqrt_over  (10)
	from_to : sqrt_over . FROM sqrt_over TO from_to  (11)
	from_to : sqrt_over . FROM sqrt_over FROM from_to  (12)
	sqrt_over : sqrt_over . OVER sqrt_over  (15)
	sqrt_over : sqrt_over . SMALLOVER sqrt_over  (16)

	OVER  shift 72
	SMALLOVER  shift 73
	TO  shift 74
	FROM  shift 75
	$end  reduce 8
	SQRT  reduce 8
	SUB  reduce 8
	SUP  reduce 8
	LPILE  reduce 8
	RPILE  reduce 8
	CPILE  reduce 8
	PILE  reduce 8
	LEFT  reduce 8
	RIGHT  reduce 8
	SIZE  reduce 8
	FONT  reduce 8
	ROMAN  reduce 8
	BOLD  reduce 8
	ITALIC  reduce 8
	FAT  reduce 8
	ACCENT  reduce 8
	BAR  reduce 8
	UNDER  reduce 8
	ABOVE  reduce 8
	TEXT  reduce 8
	QUOTED_TEXT  reduce 8
	FWD  reduce 8
	BACK  reduce 8
	DOWN  reduce 8
	UP  reduce 8
	MATRIX  reduce 8
	MARK  reduce 8
	LINEUP  reduce 8
	TYPE  reduce 8
	VCENTER  reduce 8
	PRIME  reduce 8
	SPLIT  reduce 8
	NOSPLIT  reduce 8
	UACCENT  reduce 8
	SPECIAL  reduce 8
	'^'  reduce 8
	'~'  reduce 8
	'\t'  reduce 8
	'{'  reduce 8
	'}'  reduce 8


state 35
	sqrt_over : script .  (13)

	.  reduce 13


state 36
	script : simple . SUP script  (18)
	nonsup : simple .  (19)
	nonsup : simple . SUB nonsup  (20)
	nonsup : simple . SUB simple SUP script  (21)
	simple : simple . BAR  (37)
	simple : simple . UNDER  (38)
	simple : simple . PRIME  (39)
	simple : simple . ACCENT simple  (40)
	simple : simple . UACCENT simple  (41)

	SUB  shift 76
	SUP  shift 77
	ACCENT  shift 78
	BAR  shift 79
	UNDER  shift 80
	PRIME  shift 81
	UACCENT  shift 82
	$end  reduce 19
	OVER  reduce 19
	SMALLOVER  reduce 19
	SQRT  reduce 19
	LPILE  reduce 19
	RPILE  reduce 19
	CPILE  reduce 19
	PILE  reduce 19
	LEFT  reduce 19
	RIGHT  reduce 19
	TO  reduce 19
	FROM  reduce 19
	SIZE  reduce 19
	FONT  reduce 19
	ROMAN  reduce 19
	BOLD  reduce 19
	ITALIC  reduce 19
	FAT  reduce 19
	ABOVE  reduce 19
	TEXT  reduce 19
	QUOTED_TEXT  reduce 19
	FWD  reduce 19
	BACK  reduce 19
	DOWN  reduce 19
	UP  reduce 19
	MATRIX  reduce 19
	MARK  reduce 19
	LINEUP  reduce 19
	TYPE  reduce 19
	VCENTER  reduce 19
	SPLIT  reduce 19
	NOSPLIT  reduce 19
	SPECIAL  reduce 19
	'^'  reduce 19
	'~'  reduce 19
	'\t'  reduce 19
	'{'  reduce 19
	'}'  reduce 19


state 37
	top : equation .  (2)
	equation : equation . mark  (4)

	SQRT  shift 1
	LPILE  shift 2
	RPILE  shift 3
	CPILE  shift 4
	PILE  shift 5
	LEFT  shift 6
	SIZE  shift 7
	FONT  shift 8
	ROMAN  shift 9
	BOLD  shift 10
	ITALIC  shift 11
	FAT  shift 12
	TEXT  shift 13
	QUOTED_TEXT  shift 14
	FWD  shift 15
	BACK  shift 16
	DOWN  shift 17
	UP  shift 18
	MATRIX  shift 19
	MARK  shift 20
	LINEUP  shift 21
	TYPE  shift 22
	VCENTER  shift 23
	SPLIT  shift 24
	NOSPLIT  shift 25
	SPECIAL  shift 26
	'^'  shift 27
	'~'  shift 28
	'\t'  shift 29
	'{'  shift 30
	$end  reduce 2

	mark  goto 83
	from_to  goto 33
	sqrt_over  goto 34
	script  goto 35
	simple  goto 36
	nonsup  goto 38


state 38
	script : nonsup .  (17)

	.  reduce 17


state 39
	sqrt_over : SQRT sqrt_over .  (14)
	sqrt_over : sqrt_over . OVER sqrt_over  (15)
	sqrt_over : sqrt_over . SMALLOVER sqrt_over  (16)

	.  reduce 14


state 40
	text : TEXT .  (70)

	.  reduce 70


state 41
	text : QUOTED_TEXT .  (71)

	.  reduce 71


state 42
	pile_arg : '{' . pile_element_list '}'  (58)

	SQRT  shift 1
	LPILE  shift 2
	RPILE  shift 3
	CPILE  shift 4
	PILE  shift 5
	LEFT  shift 6
	SIZE  shift 7
	FONT  shift 8
	ROMAN  shift 9
	BOLD  shift 10
	ITALIC  shift 11
	FAT  shift 12
	TEXT  shift 13
	QUOTED_TEXT  shift 14
	FWD  shift 15
	BACK  shift 16
	DOWN  shift 17
	UP  shift 18
	MATRIX  shift 19
	MARK  shift 20
	LINEUP  shift 21
	TYPE  shift 22
	VCENTER  shift 23
	SPLIT  shift 24
	NOSPLIT  shift 25
	SPECIAL  shift 26
	'^'  shift 27
	'~'  shift 28
	'\t'  shift 29
	'{'  shift 30
	.  error

	mark  goto 32
	from_to  goto 33
	sqrt_over  goto 34
	script  goto 35
	simple  goto 36
	equation  goto 84
	nonsup  goto 38
	pile_element_list  goto 85


state 43
	pile_arg : number . '{' pile_element_list '}'  (59)

	'{'  shift 86
	.  error


state 44
	number : text .  (55)

	.  reduce 55


state 45
	simple : LPILE pile_arg .  (31)

	.  reduce 31


state 46
	simple : RPILE pile_arg .  (32)

	.  reduce 32


state 47
	simple : CPILE pile_arg .  (33)

	.  reduce 33


state 48
	simple : PILE pile_arg .  (30)

	.  reduce 30


state 49
	delim : '{' .  (73)

	.  reduce 73


state 50
	delim : '}' .  (74)

	.  reduce 74


state 51
	delim : text .  (72)

	.  reduce 72


state 52
	simple : LEFT delim . equation RIGHT delim  (35)
	simple : LEFT delim . equation  (36)

	SQRT  shift 1
	LPILE  shift 2
	RPILE  shift 3
	CPILE  shift 4
	PILE  shift 5
	LEFT  shift 6
	SIZE  shift 7
	FONT  shift 8
	ROMAN  shift 9
	BOLD  shift 10
	ITALIC  shift 11
	FAT  shift 12
	TEXT  shift 13
	QUOTED_TEXT  shift 14
	FWD  shift 15
	BACK  shift 16
	DOWN  shift 17
	UP  shift 18
	MATRIX  shift 19
	MARK  shift 20
	LINEUP  shift 21
	TYPE  shift 22
	VCENTER  shift 23
	SPLIT  shift 24
	NOSPLIT  shift 25
	SPECIAL  shift 26
	'^'  shift 27
	'~'  shift 28
	'\t'  shift 29
	'{'  shift 30
	.  error

	mark  goto 32
	from_to  goto 33
	sqrt_over  goto 34
	script  goto 35
	simple  goto 36
	equation  goto 87
	nonsup  goto 38


state 53
	simple : SIZE text . simple  (47)

	LPILE  shift 2
	RPILE  shift 3
	CPILE  shift 4
	PILE  shift 5
	LEFT  shift 6
	SIZE  shift 7
	FONT  shift 8
	ROMAN  shift 9
	BOLD  shift 10
	ITALIC  shift 11
	FAT  shift 12
	TEXT  shift 13
	QUOTED_TEXT  shift 14
	FWD  shift 15
	BACK  shift 16
	DOWN  shift 17
	UP  shift 18
	MATRIX  shift 19
	TYPE  shift 22
	VCENTER  shift 23
	SPLIT  shift 24
	NOSPLIT  shift 25
	SPECIAL  shift 26
	'^'  shift 27
	'~'  shift 28
	'\t'  shift 29
	'{'  shift 30
	.  error

	simple  goto 88


state 54
	simple : FONT text . simple  (46)

	LPILE  shift 2
	RPILE  shift 3
	CPILE  shift 4
	PILE  shift 5
	LEFT  shift 6
	SIZE  shift 7
	FONT  shift 8
	ROMAN  shift 9
	BOLD  shift 10
	ITALIC  shift 11
	FAT  shift 12
	TEXT  shift 13
	QUOTED_TEXT  shift 14
	FWD  shift 15
	BACK  shift 16
	DOWN  shift 17
	UP  shift 18
	MATRIX  shift 19
	TYPE  shift 22
	VCENTER  shift 23
	SPLIT  shift 24
	NOSPLIT  shift 25
	SPECIAL  shift 26
	'^'  shift 27
	'~'  shift 28
	'\t'  shift 29
	'{'  shift 30
	.  error

	simple  goto 89


state 55
	simple : simple . BAR  (37)
	simple : simple . UNDER  (38)
	simple : simple . PRIME  (39)
	simple : simple . ACCENT simple  (40)
	simple : simple . UACCENT simple  (41)
	simple : ROMAN simple .  (42)

	ACCENT  shift 78
	BAR  shift 79
	UNDER  shift 80
	PRIME  shift 81
	UACCENT  shift 82
	$end  reduce 42
	OVER  reduce 42
	SMALLOVER  reduce 42
	SQRT  reduce 42
	SUB  reduce 42
	SUP  reduce 42
	LPILE  reduce 42
	RPILE  reduce 42
	CPILE  reduce 42
	PILE  reduce 42
	LEFT  reduce 42
	RIGHT  reduce 42
	TO  reduce 42
	FROM  reduce 42
	SIZE  reduce 42
	FONT  reduce 42
	ROMAN  reduce 42
	BOLD  reduce 42
	ITALIC  reduce 42
	FAT  reduce 42
	ABOVE  reduce 42
	TEXT  reduce 42
	QUOTED_TEXT  reduce 42
	FWD  reduce 42
	BACK  reduce 42
	DOWN  reduce 42
	UP  reduce 42
	MATRIX  reduce 42
	MARK  reduce 42
	LINEUP  reduce 42
	TYPE  reduce 42
	VCENTER  reduce 42
	SPLIT  reduce 42
	NOSPLIT  reduce 42
	SPECIAL  reduce 42
	'^'  reduce 42
	'~'  reduce 42
	'\t'  reduce 42
	'{'  reduce 42
	'}'  reduce 42


state 56
	simple : simple . BAR  (37)
	simple : simple . UNDER  (38)
	simple : simple . PRIME  (39)
	simple : simple . ACCENT simple  (40)
	simple : simple . UACCENT simple  (41)
	simple : BOLD simple .  (43)

	ACCENT  shift 78
	BAR  shift 79
	UNDER  shift 80
	PRIME  shift 81
	UACCENT  shift 82
	$end  reduce 43
	OVER  reduce 43
	SMALLOVER  reduce 43
	SQRT  reduce 43
	SUB  reduce 43
	SUP  reduce 43
	LPILE  reduce 43
	RPILE  reduce 43
	CPILE  reduce 43
	PILE  reduce 43
	LEFT  reduce 43
	RIGHT  reduce 43
	TO  reduce 43
	FROM  reduce 43
	SIZE  reduce 43
	FONT  reduce 43
	ROMAN  reduce 43
	BOLD  reduce 43
	ITALIC  reduce 43
	FAT  reduce 43
	ABOVE  reduce 43
	TEXT  reduce 43
	QUOTED_TEXT  reduce 43
	FWD  reduce 43
	BACK  reduce 43
	DOWN  reduce 43
	UP  reduce 43
	MATRIX  reduce 43
	MARK  reduce 43
	LINEUP  reduce 43
	TYPE  reduce 43
	VCENTER  reduce 43
	SPLIT  reduce 43
	NOSPLIT  reduce 43
	SPECIAL  reduce 43
	'^'  reduce 43
	'~'  reduce 43
	'\t'  reduce 43
	'{'  reduce 43
	'}'  reduce 43


state 57
	simple : simple . BAR  (37)
	simple : simple . UNDER  (38)
	simple : simple . PRIME  (39)
	simple : simple . ACCENT simple  (40)
	simple : simple . UACCENT simple  (41)
	simple : ITALIC simple .  (44)

	ACCENT  shift 78
	BAR  shift 79
	UNDER  shift 80
	PRIME  shift 81
	UACCENT  shift 82
	$end  reduce 44
	OVER  reduce 44
	SMALLOVER  reduce 44
	SQRT  reduce 44
	SUB  reduce 44
	SUP  reduce 44
	LPILE  reduce 44
	RPILE  reduce 44
	CPILE  reduce 44
	PILE  reduce 44
	LEFT  reduce 44
	RIGHT  reduce 44
	TO  reduce 44
	FROM  reduce 44
	SIZE  reduce 44
	FONT  reduce 44
	ROMAN  reduce 44
	BOLD  reduce 44
	ITALIC  reduce 44
	FAT  reduce 44
	ABOVE  reduce 44
	TEXT  reduce 44
	QUOTED_TEXT  reduce 44
	FWD  reduce 44
	BACK  reduce 44
	DOWN  reduce 44
	UP  reduce 44
	MATRIX  reduce 44
	MARK  reduce 44
	LINEUP  reduce 44
	TYPE  reduce 44
	VCENTER  reduce 44
	SPLIT  reduce 44
	NOSPLIT  reduce 44
	SPECIAL  reduce 44
	'^'  reduce 44
	'~'  reduce 44
	'\t'  reduce 44
	'{'  reduce 44
	'}'  reduce 44


state 58
	simple : simple . BAR  (37)
	simple : simple . UNDER  (38)
	simple : simple . PRIME  (39)
	simple : simple . ACCENT simple  (40)
	simple : simple . UACCENT simple  (41)
	simple : FAT simple .  (45)

	ACCENT  shift 78
	BAR  shift 79
	UNDER  shift 80
	PRIME  shift 81
	UACCENT  shift 82
	$end  reduce 45
	OVER  reduce 45
	SMALLOVER  reduce 45
	SQRT  reduce 45
	SUB  reduce 45
	SUP  reduce 45
	LPILE  reduce 45
	RPILE  reduce 45
	CPILE  reduce 45
	PILE  reduce 45
	LEFT  reduce 45
	RIGHT  reduce 45
	TO  reduce 45
	FROM  reduce 45
	SIZE  reduce 45
	FONT  reduce 45
	ROMAN  reduce 45
	BOLD  reduce 45
	ITALIC  reduce 45
	FAT  reduce 45
	ABOVE  reduce 45
	TEXT  reduce 45
	QUOTED_TEXT  reduce 45
	FWD  reduce 45
	BACK  reduce 45
	DOWN  reduce 45
	UP  reduce 45
	MATRIX  reduce 45
	MARK  reduce 45
	LINEUP  reduce 45
	TYPE  reduce 45
	VCENTER  reduce 45
	SPLIT  reduce 45
	NOSPLIT  reduce 45
	SPECIAL  reduce 45
	'^'  reduce 45
	'~'  reduce 45
	'\t'  reduce 45
	'{'  reduce 45
	'}'  reduce 45


state 59
	simple : FWD number . simple  (48)

	LPILE  shift 2
	RPILE  shift 3
	CPILE  shift 4
	PILE  shift 5
	LEFT  shift 6
	SIZE  shift 7
	FONT  shift 8
	ROMAN  shift 9
	BOLD  shift 10
	ITALIC  shift 11
	FAT  shift 12
	TEXT  shift 13
	QUOTED_TEXT  shift 14
	FWD  shift 15
	BACK  shift 16
	DOWN  shift 17
	UP  shift 18
	MATRIX  shift 19
	TYPE  shift 22
	VCENTER  shift 23
	SPLIT  shift 24
	NOSPLIT  shift 25
	SPECIAL  shift 26
	'^'  shift 27
	'~'  shift 28
	'\t'  shift 29
	'{'  shift 30
	.  error

	simple  goto 90


state 60
	simple : BACK number . simple  (49)

	LPILE  shift 2
	RPILE  shift 3
	CPILE  shift 4
	PILE  shift 5
	LEFT  shift 6
	SIZE  shift 7
	FONT  shift 8
	ROMAN  shift 9
	BOLD  shift 10
	ITALIC  shift 11
	FAT  shift 12
	TEXT  shift 13
	QUOTED_TEXT  shift 14
	FWD  shift 15
	BACK  shift 16
	DOWN  shift 17
	UP  shift 18
	MATRIX  shift 19
	TYPE  shift 22
	VCENTER  shift 23
	SPLIT  shift 24
	NOSPLIT  shift 25
	SPECIAL  shift 26
	'^'  shift 27
	'~'  shift 28
	'\t'  shift 29
	'{'  shift 30
	.  error

	simple  goto 91


state 61
	simple : DOWN number . simple  (51)

	LPILE  shift 2
	RPILE  shift 3
	CPILE  shift 4
	PILE  shift 5
	LEFT  shift 6
	SIZE  shift 7
	FONT  shift 8
	ROMAN  shift 9
	BOLD  shift 10
	ITALIC  shift 11
	FAT  shift 12
	TEXT  shift 13
	QUOTED_TEXT  shift 14
	FWD  shift 15
	BACK  shift 16
	DOWN  shift 17
	UP  shift 18
	MATRIX  shift 19
	TYPE  shift 22
	VCENTER  shift 23
	SPLIT  shift 24
	NOSPLIT  shift 25
	SPECIAL  shift 26
	'^'  shift 27
	'~'  shift 28
	'\t'  shift 29
	'{'  shift 30
	.  error

	simple  goto 92


state 62
	simple : UP number . simple  (50)

	LPILE  shift 2
	RPILE  shift 3
	CPILE  shift 4
	PILE  shift 5
	LEFT  shift 6
	SIZE  shift 7
	FONT  shift 8
	ROMAN  shift 9
	BOLD  shift 10
	ITALIC  shift 11
	FAT  shift 12
	TEXT  shift 13
	QUOTED_TEXT  shift 14
	FWD  shift 15
	BACK  shift 16
	DOWN  shift 17
	UP  shift 18
	MATRIX  shift 19
	TYPE  shift 22
	VCENTER  shift 23
	SPLIT  shift 24
	NOSPLIT  shift 25
	SPECIAL  shift 26
	'^'  shift 27
	'~'  shift 28
	'\t'  shift 29
	'{'  shift 30
	.  error

	simple  goto 93


state 63
	simple : MATRIX '{' . column_list '}'  (34)

	COL  shift 94
	LCOL  shift 95
	RCOL  shift 96
	CCOL  shift 97
	.  error

	column_list  goto 98
	column  goto 99


state 64
	mark : MARK mark .  (6)

	.  reduce 6


state 65
	mark : LINEUP mark .  (7)

	.  reduce 7


state 66
	simple : TYPE text . simple  (52)
